fixed test case for get-region by id and added swagger documentation
